# percy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  memcheck.sh  vsgen.bat
abc/: AbcGlucose.cpp  CMakeLists.txt  Glucose.cpp  SimpSolver.cpp  satSolver.cpp
abc/abc/: satSolver.h
bench/: CMakeLists.txt
docs/: Doxyfile  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  synthesizers.rst
examples/: CMakeLists.txt
glucose/: CMakeLists.txt
glucose/core/: CMakeLists.txt
include/: CMakeLists.txt
include/abc/: abc_global.h  satVec.h
include/percy/: chain.hpp  cnf.hpp  dag.hpp  dag_generation.hpp  encoders.hpp  fence.hpp  floating_dag.hpp  io.hpp  majority_chain.hpp  mig.hpp  misc.hpp  partial_dag.hpp  percy.hpp  sat_circuits.hpp  sat_interface.hpp  solvers.hpp  spec.hpp  synthesizers.hpp  tt_utils.hpp
include/percy/encoders/: berkeley_encoder.hpp  dag_encoder.hpp  ditt_encoder.hpp  ditt_maj_encoder.hpp  encoder.hpp  encoder_base.hpp  epfl_encoder.hpp  fence_encoder.hpp  floating_dag_encoder.hpp  knuth_dag_encoder.hpp  knuth_encoder.hpp  knuth_fence2_encoder.hpp  knuth_fence_encoder.hpp  maj_encoder.hpp  mig_encoder.hpp  msv_encoder.hpp  partial_dag_encoder.hpp  ssv_encoder.hpp  ssv_fence2_encoder.hpp  ssv_fence_encoder.hpp
include/percy/solvers/: bsat2.hpp  cmsat.hpp  glucose.hpp  satoko.hpp  solver_wrapper.hpp
include/percy/synthesizers/: dag_synthesizer.hpp  fence_synthesizer.hpp  floating_dag_synthesizer.hpp  std_synthesizer.hpp  synthesizer.hpp  synthesizer_base.hpp
include/topsynth/: chain.hpp  dag.hpp  dag_generation.hpp  fence.hpp  io.hpp  sat_interface.hpp  topsynth.hpp  tt_utils.hpp
lib/: CMakeLists.txt
nauty/: CMakeLists.txt  nauty.h
satoko/: CMakeLists.txt  act_clause.h  act_var.h  cdb.h  clause.h  cnf_reader.cpp  satoko.h  solver.cpp  solver.h  solver_api.cpp  types.h  watch_list.h
satoko/utils/: b_queue.h  heap.h  mem.h  misc.h  sdbl.h  sort.h
satoko/utils/vec/: vec_char.h  vec_int.h  vec_sdbl.h  vec_uint.h
test/: CMakeLists.txt  abc_equivalence.cpp  abc_integration.cpp  aig_synthesis.cpp  arbitrary_fanin.cpp  berkeley_equivalence.cpp  bitset.cpp  bmcg_sat_equivalence.cpp  bootstrap_synthesis.cpp  cardinality.cpp  cms_equivalence.cpp  cnf_gen.cpp  count_dags.cpp  dag_generation.cpp  dag_generation_starting_point.cpp  dag_isomorphism.cpp  dag_synth_equivalence.cpp  dag_to_dot.cpp  denormalization.cpp  ditt_equivalence.cpp  ditt_maj_synthesis.cpp  dont_cares.cpp  epfl_equivalence.cpp  fence_counting.cpp  fence_equivalence.cpp  fence_generator_timing.cpp  fence_po_filter.cpp  fence_profiling.cpp  find_chain.cpp  find_dag_equivalence.cpp  floating_dag.cpp  generate_solutions.cpp  generate_struct_solutions.cpp  glucose_equivalence.cpp  isomorphic_synth_equivalence.cpp  maj_decomposition.cpp  maj_enumerate.cpp  maj_equivalence.cpp  majority_chain.cpp  mig_equivalence.cpp  (+34 more)
