add_library(percy INTERFACE)
target_include_directories(percy INTERFACE ${PROJECT_SOURCE_DIR}/include)

target_link_libraries(percy INTERFACE kitty libabcsat)
if (UNIX)
    if (NOT ${DISABLE_NAUTY})
        target_link_libraries(percy INTERFACE nauty)
    endif()
    if (${PERCY_USE_SYRUP})
        target_link_libraries(percy INTERFACE syrup pthread)
    elseif(${PERCY_USE_GLUCOSE})
        target_link_libraries(percy INTERFACE glucose)
    endif()
endif()
